--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,42 @@
+@article{Barr_2013,
+  title={Random effects structure for testing interactions in linear mixed-effects models},
+  author={Barr, Dale J},
+  journal={Frontiers in psychology},
+  volume={4},
+  pages={328},
+  year={2013},
+  publisher={Frontiers}
+}
+
+@article{Barr_et_al_2013,
+  title={Random effects structure for confirmatory hypothesis testing: Keep it maximal},
+  author={Barr, Dale J and Levy, Roger and Scheepers, Christoph and Tily, Harry J},
+  journal={Journal of memory and language},
+  volume={68},
+  number={3},
+  pages={255--278},
+  year={2013}
+}
+
+@incollection{Barr_2017,
+  year={2017},
+  author={Barr, Dale J},
+  title={{Generalizing over encounters: Statistical and theoretical considerations}},
+  booktitle={Oxford Handbook of Psycholinguistics},
+  publisher={Oxford University Press},
+  url={https://psyarxiv.com/mcrzu/}
+  }
+
+@article{Baayen_Davidson_Bates_2008,
+  title={Mixed-effects modeling with crossed random effects for subjects and items},
+  author={Baayen, R Harald and Davidson, Douglas J and Bates, Douglas M},
+  journal={Journal of memory and language},
+  volume={59},
+  number={4},
+  pages={390--412},
+  year={2008},
+}
+
 @article{Belenky_et_al_2003,
   title={Patterns of performance degradation and restoration during sleep restriction and subsequent recovery: A sleep dose-response study},
   author={Belenky, Gregory and Wesensten, Nancy J and Thorne, David R and Thomas, Maria L and Sing, Helen C and Redmond, Daniel P and Russo, Michael B and Balkin, Thomas J},
@@ -8,6 +47,48 @@
   year={2003}
 }
 
+@article{Clark_1973,
+  title={The language-as-fixed-effect fallacy: A critique of language statistics in psychological research},
+  author={Clark, Herbert H},
+  journal={Journal of verbal learning and verbal behavior},
+  volume={12},
+  number={4},
+  pages={335--359},
+  year={1973},
+}
+
+
+@article{Coleman_1964,
+  title={Generalizing to a language population},
+  author={Coleman, Edmund B},
+  journal={Psychological Reports},
+  volume={14},
+  number={1},
+  pages={219--226},
+  year={1964},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{Debruine_Barr_2020,
+  title={Understanding mixed effects models through data simulation},
+  author={DeBruine, Lisa and Barr, Dale J},
+  journal={{Advances in Methods and Practice in Psychological Science}},
+  howpublished={in press},
+  year={2020},
+  url={https://psyarxiv.com/xp5cy/}
+  }
+  
+
+@article{Judd_Westfall_Kenny_2012,
+  title={Treating stimuli as a random factor in social psychology: A new and comprehensive solution to a pervasive but largely ignored problem.},
+  author={Judd, Charles M and Westfall, Jacob and Kenny, David A},
+  journal={Journal of personality and social psychology},
+  volume={103},
+  pages={54--69},
+  year={2012},
+  publisher={American Psychological Association}
+}
+
 @article{Luke_2017,
   title={Evaluating significance in linear mixed-effects models in R},
   author={Luke, Steven G},
@@ -15,6 +96,15 @@
   volume={49},
   pages={1494--1502},
   year={2017},
+}
+
+@article{Matuschek_et_al_2017,
+  title={{Balancing Type I error and power in linear mixed models}},
+  author={Matuschek, Hannes and Kliegl, Reinhold and Vasishth, Shravan and Baayen, Harald and Bates, Douglas},
+  journal={{Journal of Memory and Language}},
+  volume={94},
+  pages={305--315},
+  year={2017}
 }
 
 @Book{xie2015,
